--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "4.18.2",
-    "joi": "^17.9.2",
+    "joi": "17.9.2",
     "mongoose": "7.4.2",
     "node-cron": "3.0.2",
     "nodemailer": "6.9.4",
@@ -24,6 +24,6 @@
     "@types/express": "4.17.17",
     "@types/node-cron": "3.0.8",
     "@types/nodemailer": "6.4.9",
-    "dotenv": "^16.3.1"
+    "dotenv": "16.3.1"
   }
 }
